--- a/package.json
+++ b/package.json
@@ -10,27 +10,38 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "apisauce": "^2.1.5",
+    "com.vanimeeting.demo": "^2.5.8",
     "expo": "~44.0.0",
     "expo-font": "~10.0.4",
     "expo-google-sign-in": "~10.1.0",
+    "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.3",
     "expo-notifications": "~0.14.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-aws3": "^0.0.9",
     "react-native-confirmation-code-field": "^7.3.0",
+    "react-native-date-picker": "^4.1.5",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-otp-verify": "^1.0.4",
+    "react-native-pager-view": "5.4.9",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-super-grid": "^4.2.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
@@ -41,6 +52,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-aws3": "0.0.1",
     "@types/react-native-vector-icons": "^6.4.10",
     "typescript": "~4.3.5"
   },
