--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-aws3": "^0.0.9",
     "react-native-confirmation-code-field": "^7.3.0",
     "react-native-date-picker": "^4.1.5",
+    "react-native-incall-manager": "^3.3.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-otp-verify": "^1.0.4",
     "react-native-pager-view": "5.4.9",
